<resources>
    <string name="app_name">KasBaik</string>
    <string name="title_menu_1">Bantu Ragam Sektor Usaha</string>
    <string name="title_menu_2">Berdayakan sesama</string>
    <string name="title_menu_3">Satu satunya pinjaman bebas riba, dengan bunga 0%</string>
    <string name="title_menu_4">Mari Mulai saling bantu</string>
    <string name="desc_menu_1">Donasimu di KasBaik akan terus bermanfaat hingga usaha kecil mereka berkembang. Bantuan berupa pinjaman modal usaha dari para donatur dan akan terus bergulir untuk bantu pedagang kecil lainnya.</string>
    <string name="desc_menu_2">Pedagang kecil yang akan mulai usaha, terdaftar dalam mitra KasBaik dan telah melengkapi semua persyaratan akan diberdayakan dengan pinjaman modal yang diberikan.</string>
    <string name="desc_menu_3">KasBaik memberikan bantuan produktif dengan pinjaman kepada yang membutuhkan dengan durari dan pengembalian dana di sesuaikan dengan kemampuan penerima bantuan. KasBaik tidak meminta imbalan apapun dari peminjam kas.</string>
    <string name="desc_menu_4">Kebaikan anda sebesar apapun akan sangat berarti</string>
    <string name="get_started">Mulai</string>
    <string name="about">Tentang</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="isikas">Isi Kas</string>
    <string name="halaman_login">Halaman login</string>

    <string name="data_have_to_be_valid">data have to be valid</string>

    <string name="title_activity_donasi">DonasiActivity</string>
    <string name="tab_text_1">Donasi Sekali</string>
    <string name="tab_text_2">Donasi Rutin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donasi_sekali">Donasi Sekali</string>
    <string name="donasi_rutin">Donasi Rutin</string>

    <string name="greet_user">Selamat datang <font fgcolor="#FFE8750C">%1$s</font></string>
    <string name="greet_superadmin">Selamat datang <font fgcolor="#FFE8750C">%1$s</font></string>
    <string name="regis_as">Daftar menjadi <font fgcolor="#FFE8750C">%1$s</font></string>
    <string name="user">user</string>
    <string name="dashboard_text_1">KasBaik menghubungkan donatur dengan pedagang kecil yang butuh bantuan pinjaman modal yang mudah didapat dan bebas riba.</string>
    <string name="dashboard_text_2">Kenapa Pilih Kas Baik</string>
    <string name="dashboard_text_3">Bantuan produktif, digunakan untuk memberdayakan sesama.</string>
    <string name="dashboard_text_4">Durasi penggunaan dan pengembalian dana di sesuaikan dengan kemampuan penerima bantuan</string>
    <string name="dashboard_text_5">Bebas riba, bunga 0%</string>
    <string name="daftar_menjadi_penerima_kos">Daftar Menjadi Penerima Kos</string>
    <string name="masuk_ke_akun_anda">Masuk ke akun anda</string>
    <string name="atau_daftar_akun">Atau, Daftar akun</string>
    <string name="option_login">Atau, <font fgcolor="#FFE8750C">%1$s</font> ke akun anda</string>
    <string name="bukti_bayar">Bukti Bayar</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="tentang">Tentang</string>
    <string name="riwayat">Riwayat</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="pinjam_dana">Pinjam Dana</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="take_picture">take picture</string>
    <string name="rotate_camera">rotate camera</string>
    <string name="daftar">Daftar</string>
    <string name="detail_pinjaman">Detail Pinjaman</string>
    <string name="selesai">Selesai</string>
    <string name="pinjaman_ke">Pinjaman Ke-</string>
    <string name="jumlah_pinjaman">Jumlah Pinjaman</string>
    <string name="tenor_pinjaman">Tenor Pinjaman</string>
    <string name="pemasukan_perbulan">Pemasukan Perbulan</string>
    <string name="jumlah_tanggungan">Jumlah Tanggungan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="riwayat_pembayaran">Riwayat Pembayaran</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="tutup">Tutup</string>
    <string name="image_profile_user">Image Profile user</string>
    <string name="message">Message</string>
    <string name="created_at">Created At</string>
    <string name="okay">Okay</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="accepted">accepted</string>
    <string name="rejected">rejected</string>
    <string name="pending">pending</string>
    <string name="nama_peminjam">Nama Peminjam</string>
    <string name="credit_score">Credit Score</string>
    <string name="pinjaman">Pinjaman</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="rp">Rp.</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">cash</string>
    <string name="rekomendasi_persetujuan">Rekomendasi Persetujuan</string>
    <string name="reason">Reason</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="pesan">pesan</string>
    <string name="masukan_pesan_untuk_peminjam">Masukan pesan untuk peminjam</string>
    <string name="nama_mitra">Nama Mitra</string>
    <string name="masukan_nomor_handphone_anda">Masukan Nomor Handphone Anda</string>
    <string name="lokasi">Lokasi</string>
    <string name="masukan_lokasi_mitra">Masukan Lokasi Mitra</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="masukan_nama_mitra">Masukan nama mitra</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="result">result:</string>
    <string name="donasi">Donasi</string>
    <string name="zakat">Zakat</string>
    <string name="riwayat_pinjaman">Riwayat Pinjaman</string>
    <string name="tidak_ada_riwayat_pinjaman">Tidak ada Riwayat pinjaman</string>
    <string name="history_bukti_bayar">History Bukti Bayar</string>
    <string name="tidak_ada_history">Tidak ada history</string>
    <string name="kasbaik_dalam_angka">Kasbaik dalam Angka</string>
    <string name="total_pendanaan">Total Pendanaan</string>
    <string name="jumlah_peminjam">Jumlah Peminjam</string>
    <string name="peminjaman_berhasil">Peminjaman Berhasil</string>
    <string name="list_pending">List Pending</string>
    <string name="mitra">Mitra</string>
    <string name="pengguna">Pengguna</string>
    <string name="list_peminjam">List Peminjam</string>
    <string name="mitra_name">Mitra Name</string>
    <string name="total_payment">Total Payment</string>
    <string name="pinjaman_diterima">Pinjaman diterima</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tidak_ada_pinjaman_berjalan">Tidak ada pinjaman berjalan</string>
    <string name="history_pembayaran">History Pembayaran</string>
    <string name="edit">Edit</string>
    <string name="masukan_pesan">Masukan Pesan</string>
    <string name="enter_the_amount_of_payment">enter the amount of payment</string>
    <string name="enter_message">enter message</string>
    <string name="ajukan_pinjaman_dana">ajukan pinjaman dana</string>
    <string name="optional">optional</string>
    <string name="masukan_alasan_anda_meminjam">Masukan Alasan Anda meminjam</string>
    <string name="alasan_meminjam">Alasan Meminjam</string>
    <string name="masukan_tanggungan_anda">Masukan Tanggungan Anda</string>
    <string name="berapa_orang_tanggungan">Berapa Orang Tanggungan</string>
    <string name="decrease_per_500_rupiah">decrease per 500 rupiah</string>
    <string name="add_per_500_rupiah">Add per 500 rupiah</string>
    <string name="jangka_waktu_pinjaman">Jangka waktu pinjaman</string>
    <string name="tenor_perminggu">Tenor perminggu</string>
    <string name="title_pinjam_dana">Lengkapi Data Dibawah Untuk Peminjaman Dana</string>
    <string name="nama">Nama</string>
    <string name="masukan_nama_anda">Masukan Nama Anda</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="usia">Usia</string>
    <string name="gender">Gender</string>
    <string name="wanita">wanita</string>
    <string name="pria">pria</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="buruh">buruh</string>
    <string name="foto_ktp_jpg">foto-ktp.jpg</string>
    <string name="choose">choose</string>
    <string name="foto_selfie_jpg">foto-selfie.jpg</string>
    <string name="foto_diri_jpg">foto-diri.jpg</string>
    <string name="alamat_tinggal">Alamat tinggal</string>
    <string name="masukan_alamat_anda">Masukan Alamat Anda</string>
    <string name="alamat_ktp">Alamat ktp</string>
    <string name="masukan_alamat_ktp">Masukan Alamat KTP</string>
    <string name="preview_image">preview image</string>
    <string name="rp_dummy">Rp.201112012</string>
    <string name="list_payment">List Payment</string>
    <string name="list_pinjaman">List Pinjaman</string>
    <string name="result_none">Result : None</string>
    <string name="not_yet_evaluated">Not yet evaluated</string>
    <string name="not_reviewed">Not Reviewed</string>
    <string name="lengkapi_profile_mu_terlebih_dahulu">Lengkapi profile mu terlebih dahulu</string>
    <string name="isi">isi</string>
    <string name="login_sebagai_peminjam">Login Sebagai Peminjam</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="belum_punya_akun_daftar_akun">Belum Punya Akun? Daftar Akun</string>
    <string name="remember_me">Remember me</string>
    <string name="tidak_ada_notifikasi">Tidak ada Notifikasi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="admin_kasbaik">Admin Kasbaik</string>
    <string name="_08xxxxxxxxxx">08XXXXXXXXXX</string>
    <string name="ex_bandung">ex: Bandung</string>
    <string name="kembali">Kembali</string>
    <string name="username">Username</string>
    <string name="rp_500_000_00">Rp. 500.000,00</string>
    <string name="if_login">Masuk ke akun Anda</string>


    <string-array name="status">
        <item>pending</item>
        <item>accepted</item>
        <item>rejected</item>
        <item>payment</item>
    </string-array>

    <string-array name="method">
        <item>cash</item>
        <item>cicil</item>
    </string-array>

    <string-array name="pekerjaan">
        <item>buruh</item>
        <item>pengajar</item>
        <item>pedagang</item>
        <item>pekerja lepas</item>
        <item>wirausaha</item>
        <item>pns</item>
        <item>tni/polri</item>
        <item>wiraswasta</item>
    </string-array>
</resources>