<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_ijo"
        tools:context=".ui.beranda.login.superadmin.home.pengguna.profile.ProfileUserAdminActivity">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_profile_user"
            android:background="@drawable/rounded_corners"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/nama"
            android:textColor="@color/white"
            android:textSize="16sp"

            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintTop_toTopOf="@id/iv_avatar" />

        <EditText
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/masukan_nama_anda"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="name"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@id/tv_label_name"
            app:layout_constraintTop_toBottomOf="@id/tv_label_name" />

        <TextView
            android:id="@+id/tv_label_whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nomor_handphone"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <EditText
            android:id="@+id/tv_whatsapp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/your_phone_number"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:autofillHints="number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_label_whatsapp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_whatsapp" />

        <TextView
            android:id="@+id/tv_label_usia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/usia"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <EditText
            android:id="@+id/ed_usia"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corners"
            android:inputType="number"
            android:paddingHorizontal="16dp"
            android:hint="@string/usia"
            android:autofillHints="age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_usia" />

        <TextView
            android:id="@+id/tv_label_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_whatsapp"
            app:layout_constraintTop_toBottomOf="@id/tv_whatsapp" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tv_label_gender"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_gender">

            <RadioButton
                android:id="@+id/radio_wanita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/wanita"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_pria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/pria"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_label_pekerjaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pekerjaan"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_usia" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_pekerjaan"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_pekerjaan">

            <AutoCompleteTextView
                android:id="@+id/pekerjaan_item_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/buruh" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_label_foto_ktp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:text="@string/foto_ktp_jpg"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/btn_choose_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_choose_1" />

        <Button
            android:id="@+id/btn_choose_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/choose"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_choose_1" />

        <TextView
            android:id="@+id/tv_label_foto_selfie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:text="@string/foto_selfie_jpg"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/btn_choose_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_choose_2" />

        <Button
            android:id="@+id/btn_choose_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/choose"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_choose_2" />

        <TextView
            android:id="@+id/tv_label_foto_diri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:text="@string/foto_diri_jpg"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/btn_choose_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_pekerjaan" />

        <ImageButton
            android:id="@+id/see_image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye_orange"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/preview_image"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_foto_diri"
            app:layout_constraintTop_toTopOf="@id/tv_label_foto_diri"/>

        <ImageButton
            android:id="@+id/see_image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye_orange"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/preview_image"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_foto_ktp"
            app:layout_constraintTop_toTopOf="@id/tv_label_foto_ktp"/>

        <ImageButton
            android:id="@+id/see_image_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye_orange"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/preview_image"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_foto_selfie"
            app:layout_constraintTop_toTopOf="@id/tv_label_foto_selfie"/>

        <Button
            android:id="@+id/btn_choose_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/choose"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_pekerjaan" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="@id/ed_alamat_ktp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_alamat_ktp" />


        <TextView
            android:id="@+id/tv_label_alamat_tinggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/alamat_tinggal"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_3" />

        <EditText
            android:id="@+id/ed_alamat_tinggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/masukan_alamat_anda"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:autofillHints="address"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_alamat_tinggal" />

        <TextView
            android:id="@+id/tv_label_alamat_ktp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/alamat_ktp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_alamat_tinggal" />

        <EditText
            android:id="@+id/ed_alamat_ktp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/masukan_alamat_ktp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:autofillHints="address"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_alamat_ktp" />

        <ProgressBar
            android:id="@+id/progressBar_profile"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>