<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_ijo"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/image"
        android:src="@drawable/avatar_placeholder"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image_profile_user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/result_none"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/confidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/not_yet_evaluated"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>