<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_ijo"
    tools:context=".ui.dashboard.login.DashboardLoginActivity">

    <ImageView
        android:id="@+id/logo_kasbaik"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_kasibaik"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_text_1"
        android:textColor="@color/white"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/logo_kasbaik"
        app:layout_constraintTop_toBottomOf="@+id/logo_kasbaik" />

    <TextView
        android:id="@+id/tv_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_text_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_text_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_1" />

    <View
        android:id="@+id/view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="@+id/tv_text_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_2" />

    <TextView
        android:id="@+id/tv_text_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_text_3"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_2"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="@+id/tv_text_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_3" />

    <TextView
        android:id="@+id/tv_text_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_text_4"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginHorizontal="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="@+id/tv_text_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_3"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="@+id/tv_text_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_4" />

    <TextView
        android:id="@+id/tv_text_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_text_5"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_4"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_text_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk_ke_akun_anda"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_5" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_6" />

    <TextView
        android:id="@+id/tv_text_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atau_daftar_akun"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>